kubernetes/decomissioned/deepstack/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: deepstack
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-redirect: false
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - deepstack.gregrapp.net
      secretName: deepstack-tls
  rules:
    - host: deepstack.gregrapp.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: deepstack
                port:
                  number: 5000
